tests/negative/traits/impl_for_addr.orng
// impl_for_addr.orng:5:11: error: cannot implement method for address types
// impl for &mut Int {
//          ^
// 
impl for &mut Int {
    fn a (self, x: Int) -> () {self^ += x}
}

fn main() -> Int {
    3
}